add security check

--- a/Client/Chart/index.html
+++ b/Client/Chart/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gantt Chart</title>
     <link rel="stylesheet" href="style.css" />
+    <script>
+      // Security Check
+        const isAuthenticated = sessionStorage.getItem('authenticated');
+        const userRole = sessionStorage.getItem('userRole');
+        if (!isAuthenticated) {
+        // Jika belum login, simpan tujuan & alihkan ke halaman login
+            sessionStorage.setItem('redirectTo', window.location.pathname);
+            window.location.href = '/login.html'; 
+        }   else if (userRole !== 'KONTRAKTOR') {
+                // Jika sudah login tapi jabatan salah, beri peringatan & alihkan ke homepage
+                alert('Anda tidak memiliki izin untuk mengakses halaman ini.');
+                window.location.href = '/';
+            }
+    </script>
 </head>
 <body>
     <div class="container">
