--- a/Client/Chart/index.html
+++ b/Client/Chart/index.html
@@ -21,6 +21,13 @@
     </script>
 </head>
 <body>
+    <header>
+        <a href="/">
+            <img src="../Assets/Alfamart-Emblem.png" alt="Alfamart Logo" class="header-logo"/>
+        </a>
+        <h1>Gantt Chart B&M</h1>
+        <button id="logout-button-form" class="btn-logout-form">Logout</button>
+    </header>
     <div class="container">
         <div class="header">
             <h1>Gantt Chart SPARTA</h1>
