--- a/Client/Chart/index.html
+++ b/Client/Chart/index.html
@@ -33,13 +33,13 @@
             <div class="control-group">
                 <label>No. Ulok:</label>
                 <select id="ulokSelect" onchange="changeUlok()">
-                    <option value="">Pilih No. Ulok</option>
+                    <option value="">--/--</option>
                 </select>
             </div>
             <div class="control-group">
                 <label>Pilih Tahap:</label>
                 <select id="taskSelect">
-                    <option value="">Semua Tahap</option>
+                    <option value="">--/--</option>
                 </select>
             </div>
             <div class="control-group">
