--- a/Client/Chart/index.html
+++ b/Client/Chart/index.html
@@ -25,7 +25,7 @@
         <a href="/">
             <img src="../Assets/Alfamart-Emblem.png" alt="Alfamart Logo" class="header-logo"/>
         </a>
-        <h1>Gantt Chart B&M</h1>
+        <h1>Gantt Chart</h1>
         <button id="logout-button-form" class="btn-logout-form">Logout</button>
     </header>
     <div class="container">
