--- a/Client/Chart/index.html
+++ b/Client/Chart/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gantt Chart</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="/Assets/favicon.ico" type="image/x-icon">
     <script>
       // Security Check
         const isAuthenticated = sessionStorage.getItem('authenticated');
