--- a/Client/index.html
+++ b/Client/index.html
@@ -12,7 +12,7 @@
         <header class="main-header">
             <div class="header-logo-container">
                 <img src="/Assets/Alfamart-Emblem.png" alt="Alfamart Logo" class="header-logo"/>
-                <img src="/Homepage/Building-Logo.png" alt="Building & Maintenance Logo" class="building-logo"/>
+                <img src="/Assets/Building-Logo.png" alt="Building & Maintenance Logo" class="building-logo"/>
             </div>
             <h1>Property & Development</h1>
         </header>
@@ -29,22 +29,6 @@
                 <a href="https://frontend-form-virid.vercel.app/login-input_pic.html" class="menu-item">
                     <h3>Pengawasan</h3>
                     <p>Input informasi pengawasan.</p>
-                </a>
-                <a href="https://opnamebnm.vercel.app/" class="menu-item">
-                    <h3>Opname</h3>
-                    <p>Pengisian form Opname.</p>
-                </a>
-                <a href="https://dokumentasi-bangunan.vercel.app/" class="menu-item">
-                    <h3>Foto Dokumentasi Bangunan Toko Baru</h3>
-                    <p>Pengisian form Dokumentasi.</p>
-                </a>
-                <a href="https://frontend-form-virid.vercel.app/login-perpanjanganspk.html/" class="menu-item">
-                    <h3>Pertambahan Hari SPK</h3>
-                    <p>Pengisian form Pertambahan Hari SPK.</p>
-                </a>
-                <a href="https://penyimpanan-dokumen.vercel.app/" class="menu-item">
-                    <h3>Penyimpanan Dokumen Toko</h3>
-                    <p>Pengisian form Penyimpanan Dokumen.</p>
                 </a>
             </nav>
         </main>
