--- a/Client/index.html
+++ b/Client/index.html
@@ -23,12 +23,12 @@
             </div>
             <nav class="menu-container">
                 <a href="https://building-alfamart.vercel.app/login_spk.html" class="menu-item" id="menu-spk">
-                    <h3>Buat SPK</h3>
-                    <p>Buat Surat Perintah Kerja untuk kontraktor.</p>
+                    <h3>Kontraktor</h3>
+                    <p>Menu Gantt Chart Kontraktor</p>
                 </a>
                 <a href="https://frontend-form-virid.vercel.app/login-input_pic.html" class="menu-item">
-                    <h3>Pengawasan</h3>
-                    <p>Input informasi pengawasan.</p>
+                    <h3>PIC</h3>
+                    <p>Menu Gantt Chart PIC</p>
                 </a>
             </nav>
         </main>
