update link login

--- a/Client/PIC/login.html
+++ b/Client/PIC/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Gantt Chart - Aplikasi Building & Maintenance</title>
+    <title>Login PIC - Gantt Chart</title>
     <link rel="stylesheet" href="login_style.css">
     <link rel="icon" href="/Assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -44,6 +44,6 @@
         </form>
     </div>
 
-    <script src="login_script.js"></script>
+    <script src="/pic/login_script.js"></script>
 </body>
 </html>
