update url login

--- a/Client/index.html
+++ b/Client/index.html
@@ -22,11 +22,11 @@
                 <p>System for Property Administration, Reporting, Tracking & Approval</p>
             </div>
             <nav class="menu-container">
-                <a href="https://gantt-chart-bnm.vercel.app/cntr/login.html" class="menu-item" id="menu-spk">
+                <a href="https://gantt-chart-bnm.vercel.app/CNTR/login.html" class="menu-item" id="menu-spk">
                     <h3>Kontraktor</h3>
                     <p>Menu Gantt Chart Kontraktor</p>
                 </a>
-                <a href="https://gantt-chart-bnm.vercel.app/pic/login.html" class="menu-item">
+                <a href="https://gantt-chart-bnm.vercel.app/PIC/login.html" class="menu-item">
                     <h3>PIC</h3>
                     <p>Menu Gantt Chart PIC</p>
                 </a>
