update src script

--- a/Client/CNTR/login.html
+++ b/Client/CNTR/login.html
@@ -44,6 +44,6 @@
         </form>
     </div>
 
-    <script src="/cntr/login_script.js"></script>
+    <script src="/CNTR/login_script.js"></script>
 </body>
 </html>
