--- a/Client/PIC/login.html
+++ b/Client/PIC/login.html
@@ -44,6 +44,6 @@
         </form>
     </div>
 
-    <script src="/pic/login_script.js"></script>
+    <script src="/PIC/login_script.js"></script>
 </body>
 </html>
