update login role

--- a/Client/PIC/Chart/index.html
+++ b/Client/PIC/Chart/index.html
@@ -15,7 +15,7 @@
             // Jika belum login, simpan tujuan & alihkan ke halaman login
             sessionStorage.setItem('redirectTo', window.location.pathname);
             window.location.href = '/';
-        } else if (userRole !== 'BRANCH BUILDING SUPPORT') {
+        } else if (userRole == 'KONTRAKTOR') {
             // Jika sudah login tapi jabatan salah, beri peringatan & alihkan ke homepage
             alert('Anda tidak memiliki izin untuk mengakses halaman ini.');
             window.location.href = '/';
