--- a/Client/PIC/Chart/index.html
+++ b/Client/PIC/Chart/index.html
@@ -26,7 +26,7 @@
 <body>
     <header>
         <a href="/">
-            <img src="../Assets/Alfamart-Emblem.png" alt="Alfamart Logo" class="header-logo" />
+            <img src="../../Assets/Alfamart-Emblem.png" alt="Alfamart Logo" class="header-logo" />
         </a>
         <h1>Gantt Chart</h1>
         <button id="logout-button-form" class="btn-logout-form">Logout</button>
