--- a/Client/CNTR/Chart/index.html
+++ b/Client/CNTR/Chart/index.html
@@ -39,12 +39,24 @@
                     <option value="">--/--</option>
                 </select>
             </div>
+            <div class="control-group">
+                <label>Pilih Tahap:</label>
+                <select id="taskSelect">
+                    <option value="">--/--</option>
+                </select>
+            </div>
+            <div class="control-group">
+                <label>Keterlambatan (hari):</label>
+                <input type="number" id="delayInput" min="0" max="30" value="0">
+            </div>
+            <button class="btn btn-primary" onclick="applyDelay()">Terapkan Keterlambatan</button>
+            <button class="btn btn-primary" onclick="resetChart()">Reset</button>
         </div>
         <div class="project-info" id="projectInfo"></div>
         <div class="api-data" id="apiData"></div>
         <div class="export-buttons" id="exportButtons" style="display: none;">
             <button class="btn-export btn-excel" onclick="exportToExcel()">
-                Export to Excel
+                📊 Export to Excel
             </button>
         </div>
         <div class="stats" id="stats"></div>
