update view chart cont

--- a/Client/CNTR/Chart/index.html
+++ b/Client/CNTR/Chart/index.html
@@ -44,7 +44,7 @@
         <div class="api-data" id="apiData"></div>
         <div class="export-buttons" id="exportButtons" style="display: none;">
             <button class="btn-export btn-excel" onclick="exportToExcel()">
-                📊 Export to Excel
+                Export to Excel
             </button>
         </div>
         <div class="stats" id="stats"></div>
